# acf-framework

./: .gitignore  CITATION.cff  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
batteries/: huggingface_loader.py
batteries/cg100/: cg100-methodology.md  cg100.jsonl  cg100.schema.json
batteries/fr36/: fr36-methodology.md  fr36.jsonl  fr36.schema.json
batteries/zorblaxia/: zorblaxia-methodology.md  zorblaxia.jsonl  zorblaxia.schema.json
examples/data/: sample-experiment-run.json  sample-longitudinal-series.json  sample-per-query-record.json
examples/profiles/: comparison-example.json  sample-acf-profile.json
examples/queries/: common-queries.sparql
knowledge/config/: default-weights.md  scoring-thresholds.md
knowledge/dimensions/: action-capability.md  autonomy.md  breadth.md  compositional-generalization.md  depth.md  factual-grounding.md  formal-reasoning.md  generalization-boundary.md  knowledge-transparency.md  service-orientation.md
knowledge/hypotheses/: paper-122-hypotheses.md
knowledge/levels/: acf-1-elementary.md  acf-2-middle-school.md  acf-3-high-school.md  acf-4-bachelors.md  acf-5-masters.md  acf-6-phd.md
knowledge/measures/: accuracy.md  efficiency.md  latency.md  metacognitive.md  proposed.md  quality.md  quantity.md  y-layer-growth.md  y-layer-population.md  y-layer-quality.md  y-layer-structural.md
schemas/: acf-profile.schema.json  experiment-run.schema.json  longitudinal-series.schema.json  per-query-record.schema.json
src/acf/: __init__.py  batteries.py  cli.py  graph.py
src/acf/data/: __init__.py  exporter.py  loader.py  schemas.py  validator.py
src/acf/hypotheses/: __init__.py  analyzer.py  registry.py  results.py
src/acf/measures/: __init__.py  collector.py  registry.py  types.py
src/acf/scoring/: __init__.py  profile.py  scorer.py
src/acf/spec/: __init__.py  uer.py
tests/: test_cli.py  test_graph.py  test_hypotheses.py  test_scoring.py  test_stats.py
(+2 files in other folders)
