[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acf-framework"
version = "0.1.0"
description = "Graph-based AGI Certification Framework: Measure AI understanding via human professional standards"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Hank Hagedorn", email = "hank@conguent.systems" }
]
keywords = [
    "agi", "certification", "benchmark", "evaluation",
    "neurosymbolic", "ai-measurement", "bloom-taxonomy",
    "yurtle", "rdf", "knowledge-graph", "sparql"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "yurtle-rdflib>=0.1.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
search = ["nusy-nano>=0.1.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]
all = ["acf-framework[search,dev,docs]"]

[project.scripts]
acf = "acf.cli:main"

[project.urls]
Homepage = "https://github.com/hankh95/acf-framework"
Documentation = "https://github.com/hankh95/acf-framework#readme"
Repository = "https://github.com/hankh95/acf-framework"
Issues = "https://github.com/hankh95/acf-framework/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/acf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
